領域ごとの座標に描画

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <div id="message"></div>
     </pre>
 
-    <button type = "button" onclick="show()">show</button>
+    <button type = "button" onclick="show(0)">show左上</button>
+    <button type = "button" onclick="show(1)">show右上</button>
+    <button type = "button" onclick="show(2)">show右下</button>
+    <button type = "button" onclick="show(3)">show左下</button>
 
     <script src="index.js"></script>
   </body>
